--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="./src/assets/myimg.jpeg" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=Quicksand:wght@300..700&display=swap");
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Gaurav's portfolio</title>
   </head>
   <body>
     <div id="root"></div>
